# bat-native-confirmations

./: .gitignore  .gitmodules  BUILD.gn  Makefile  README.md
include/: confirmations.hpp
include/bat/confirmations/: confirmations_client.h
src/: bat_native_confirmations.cpp  confirmations.cpp  confirmations_impl.cc  confirmations_impl.h  mock_confirmations_client.cc  payout_tokens.cc  payout_tokens.h  redeem_token.cc  redeem_token.h  refill_tokens.cc  refill_tokens.h  security_helper.h
test/: confirmations_client_mock.h
