# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if (is_android) {
  import("//build/config/android/rules.gni")
}
if (is_android || defined(is_docker)) {
  dep_base = rebase_path("./", "//")
} else {
  dep_base = rebase_path("../..", "//")
}

config("external_config") {
  include_dirs = [ "include", 
                   "deps/challenge-bypass-ristretto-ffi/src/",
  ]
}

config("internal_config") {
  include_dirs = [ "src" ]
}

executable("bnc-test") {

  sources = [
     "src/bat_native_confirmations.cpp",
  ]

  include_dirs = [ "src" ]

  deps = [
    ":confirmations",
    rebase_path("bat-native-rapidjson", dep_base),
  ]
}

group("bat-native-confirmations") {
  public_deps = [
    ":confirmations",
  ]

  data_deps = [
    ":bat-native-confirmations-standalone",
  ]
}

static_library("bat-native-confirmations-standalone") {
  complete_static_lib = true

  output_dir = root_out_dir

  configs -= [ "//build/config/compiler:thin_archive" ]

  defines = [
    "STANDALONE_BUILD",
  ]

  deps = [
    ":confirmations",
  ]
}

source_set("confirmations") {
  public_configs = [ ":external_config" ]
  configs += [ ":internal_config" ]

  output_name = "bat_native_confirmations"

  libs = [
    "Security.framework",
    "deps/challenge-bypass-ristretto-ffi/target/debug/libchallenge_bypass_ristretto.a",
  ]

  sources = [
    "deps/challenge-bypass-ristretto-ffi/src/wrapper.hpp",
    "deps/challenge-bypass-ristretto-ffi/src/wrapper.cpp",
    "deps/challenge-bypass-ristretto-ffi/src/lib.h",
    "include/confirmations.hpp",
    "src/confirmations.cpp",
  ]

  deps = [
    "//base",
    rebase_path("bat-native-rapidjson", dep_base),
  ]
}
